# HydroErosion

./: .gitignore  README.md  erodeLandscape.py  erodedmap.csv  generateLandscape.py  makefile  map.csv  pyproject.toml  requirements.txt  utilities.py  viewLandscape.py
hydro_erosion/: __init__.py  __main__.py  erodeLandscape.py  generateLandscape.py
maps/eroded/: erodedmap.csv
maps/processed/: erodedmap.csv  hydrationmap.csv
maps/raw/: heightmap.csv  rockmap.csv
src/hydroerosion/: __main__.py  erodeLandscape.py  generateLandscape.py
