[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydro_erosion"
version = "0.1.4"
authors = [
  { name="Mikolaj Figurski", email="miko.f80@gmail.com" },
]
description = "Model of rain eroding a landscape"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/mfigurski80/HydroErosion/tree/master"
"Bug Tracker" = "https://github.com/mfigurski80/HydroErosion/issues"
